--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,7 @@ aside {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   border-right: 1px solid #2f353d;
 }
@@ -25,8 +26,18 @@ aside {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 400px;
+}
+
+.top-side-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 90px;
 }
 
 .logo-img {
@@ -59,6 +70,27 @@ a.side-button {
 
 a.side-button:hover {
   background-color: #161b22;
+}
+
+.bottom-side-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.gits-wallet {
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  background-color: #02040a;
+  width: 100%;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
 }
 
 main {
