--- a/css/home.css
+++ b/css/home.css
@@ -30,13 +30,14 @@ aside {
 }
 
 .side-container {
+  padding-top: 40px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 310px;
+  gap: 370px;
 }
 
 .top-side-container {
@@ -54,8 +55,8 @@ aside {
 }
 
 .button-container {
-  width: 210px;
-  height: 290px;
+  width: 190px;
+  height: 230px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,11 +74,32 @@ a.side-button {
   border-radius: 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  gap: 15px;
+  padding-left: 22px;
+}
+
+.homeIcon {
+  width: 20px;
+  height: 20px;
+}
+
+.rankIcon {
+  width: 20px;
+  height: 20px;
+}
+
+.diceIcon {
+  width: 20px;
+  height: 20px;
+}
+
+.profileIcon {
+  width: 20px;
+  height: 20px;
 }
 
 .bottom-side-container {
-  width: 100%;
+  width: 212px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,7 +112,7 @@ a.side-button {
   color: white;
   background-color: #02040a;
   width: 100%;
-  height: 64px;
+  height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
