--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,7 @@ aside {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid #2f353d;
+  border-right: 1px solid #3d444d;
 }
 
 .act {
