--- a/css/home.css
+++ b/css/home.css
@@ -110,3 +110,13 @@ main {
   width: 1620px;
   height: 100vh;
 }
+
+.main-container {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
