--- a/css/home.css
+++ b/css/home.css
@@ -112,7 +112,7 @@ main {
 }
 
 .main-container {
-  background-color: white;
+  background-color: #0d1117;
   width: 100%;
   height: 100%;
   display: flex;
