--- a/css/profile.css
+++ b/css/profile.css
@@ -120,7 +120,6 @@ main {
 }
 
 .main-box {
-  background-color: white;
   width: 1000px;
   height: 700px;
   display: flex;
@@ -128,7 +127,6 @@ main {
 }
 
 .top-box {
-  background-color: green;
   width: 100%;
   height: 60px;
   display: flex;
@@ -145,6 +143,36 @@ main {
   background-color: black;
   width: 100%;
   height: 260px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.middle-box-right {
+  background-color: pink;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-picture {
+  background-color: white;
+  width: 220px;
+  height: 220px;
+  border-radius: 100%;
+}
+
+.middle-box-right-top {
+  background-color: green;
+  width: 100%;
+  height: 60px;
+}
+
+.middle-box-right-bottom {
+  background-color: purple;
+  width: 100%;
+  height: 100px;
 }
 
 .bottom-box {
