--- a/css/profile.css
+++ b/css/profile.css
@@ -140,9 +140,8 @@ main {
 }
 
 .middle-box {
-  background-color: black;
   width: 100%;
-  height: 260px;
+  height: 220px;
   display: flex;
   align-items: center;
   gap: 50px;
@@ -158,7 +157,7 @@ main {
 
 .middle-box-right {
   width: 100%;
-  height: 260px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -178,21 +177,21 @@ main {
 }
 
 .middle-box-right-bottom {
-  background-color: purple;
   width: 100%;
-  height: 210px;
+  height: 170px;
 }
 
 .middle-box-right-bottom-top {
   width: 100%;
-  height: 28px;
-  background-color: gray;
+  height: 26px;
   display: flex;
   justify-content: end;
   align-items: center;
 }
 
 .middle-box-right-bottom-bottom {
+  border-radius: 5px;
+  border: 1px solid #3d444d;
   width: 100%;
   height: 180px;
   display: flex;
@@ -201,7 +200,13 @@ main {
 }
 
 .description {
-  width: 98%;
+  padding-left: 6px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  resize: none;
+  width: 100%;
   height: 92%;
 }
 
@@ -225,9 +230,10 @@ main {
 
 .github-name {
   color: white;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 .github-url {
   text-decoration: none;
+  color: #385fed;
 }
