--- a/css/profile.css
+++ b/css/profile.css
@@ -141,7 +141,7 @@ main {
 
 .middle-box {
   width: 100%;
-  height: 220px;
+  height: 200px;
   display: flex;
   align-items: center;
   gap: 50px;
@@ -164,21 +164,21 @@ main {
 
 .profile-picture {
   background-color: white;
-  width: 210px;
-  height: 210px;
+  width: 200px;
+  height: 200px;
   border-radius: 100%;
 }
 
 .middle-box-right-top {
   width: 100%;
-  height: 50px;
+  height: 40px;
   display: flex;
   align-items: center;
 }
 
 .middle-box-right-bottom {
   width: 100%;
-  height: 170px;
+  height: 160px;
 }
 
 .middle-box-right-bottom-top {
@@ -193,7 +193,7 @@ main {
   border-radius: 5px;
   border: 1px solid #3d444d;
   width: 100%;
-  height: 180px;
+  height: 134px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,6 +201,7 @@ main {
 
 .description {
   padding-left: 6px;
+  padding-right: 6px;
   color: white;
   background-color: transparent;
   border: none;
@@ -208,6 +209,10 @@ main {
   resize: none;
   width: 100%;
   height: 92%;
+}
+
+.description:hover {
+  cursor: not-allowed;
 }
 
 .edit-icon {
