--- a/css/profile.css
+++ b/css/profile.css
@@ -223,9 +223,9 @@ main {
 }
 
 .bottom-box {
-  background-color: blue;
+  margin-top: 40px;
   width: 100%;
-  height: 380px;
+  height: 320px;
 }
 
 .github-container {
@@ -253,7 +253,7 @@ main {
 
 .gits-point-right {
   display: flex;
-  gap: 4px;
+  gap: 6px;
 }
 
 .gits-point {
@@ -270,7 +270,7 @@ main {
   border: 1px solid #3d444d;
   border-radius: 5px;
   width: 84px;
-  height: 32px;
+  height: 36px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,7 +294,16 @@ main {
 }
 
 .bottom-box-bottom {
-  background-color: yellow;
   width: 100%;
-  height: 324px;
+  height: 264px;
+  display: flex;
+  align-items: center;
+}
+
+.commit-img-container {
+  width: 100%;
+  height: 240px;
+  background-color: #0d1116;
+  border: 1px solid #3d444d;
+  border-radius: 5px;
 }
