feat: 홈 화면 top, bottom 나누기

--- a/css/home.css
+++ b/css/home.css
@@ -132,3 +132,9 @@ main {
   color: white;
   font-weight: 600;
 }
+
+.home-box {
+  background-color: #0d1116;
+  border: 1px solid #2f353d;
+  border-radius: 5px;
+}
