--- a/css/home.css
+++ b/css/home.css
@@ -120,7 +120,7 @@ main {
 }
 
 .main-box {
-  background-color: gray;
+  background-color: pink;
   width: 1000px;
   height: 700px;
   display: flex;
