--- a/css/home.css
+++ b/css/home.css
@@ -138,3 +138,18 @@ main {
   border: 1px solid #2f353d;
   border-radius: 5px;
 }
+
+.top-box {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.bottom-box {
+  width: 100%;
+  height: 640px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
